Apply CSS style to Table and create JS functions
With the new updateTableTitle and createTable JS functions, we can now generate all the information necessary to be displayed on the Web Page by using dynamic html modifications

--- a/Tabuada/index.html
+++ b/Tabuada/index.html
@@ -25,17 +25,11 @@
     </form>
 
     <div id="multiplication-table">
-        <h2>Table of <span></span> from 1 to <span></span></h2>
+        <h2 id="table-title">Waiting for input</h2>
         <div id="multiplication-operations">
             <p>Give me a number to generate the table...</p>
-            <div class="row">
-                <div class="operation">5 x 1 =</div>
-                <div class="result">5</div>
-            </div>
         </div>
     </div>
-
-
-
 </body>
+
 </html>
